# IR_Assignment1

./: CMakeLists.txt  README.md  package.xml
launch/: assignment.launch.py  camera.launch.py
src/: april_detection_node.cpp  brain_node.cpp  table_detection_node.cpp
srv/: FindApril.srv  FindTables.srv
