<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>group11_assignament_1</name>
  <version>0.0.1</version>
  <description>Group 11 Assignment 1 - TurtleBot navigation with AprilTag detection</description>
  <maintainer email="lorenzo.erba.1@studenti.unipd.it">Lorenzo Erba</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Core ROS 2 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <!-- Messages -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>apriltag_msgs</depend>

  <!-- TF -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Runtime: launch dependencies (not compiled, just launched) -->
  <exec_depend>ir_launch</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

